added website link

--- a/public/index.html
+++ b/public/index.html
@@ -496,8 +496,8 @@
 
 			<div class="p-5 foot text-center">
 				<p>For the maximum experience, please view on a desktop</p>
-				<p>This website was created as a project to display at <a href="#">SAMYii Network</a>.</p>
-				<P>For more projects like this or for any enquires regarding this project, please visit the <a href="#">SAMYii Network</a> webpage.</p>
+				<p>This website was created as a project to display at <a target="_blank" href="http:www.samyii.com">SAMYii.com</a>.</p>
+				<P>For more projects like this or for any enquires regarding this project, please visit the <a target="_blank" href="http:www.samyii.com">SAMYii Network</a> webpage.</p>
 				<p>All of the stunning images used on this project are from the amazing photographers at <a target="_blank" href="https://unsplash.com/collections/2296153/recipe-blog">Unsplash</a>.</p>
 				<div class="mt-5">
 					<a class="btn-floating btn-sm social3-gradient"><i class="fa fa-instagram"></i></a>
@@ -508,8 +508,7 @@
 				</div>
 			</div>
 
-		  <div class="footer-copyright text-center py-3">© 2018 Copyright:
-		    <a href="#"> SAMYii-Network.com</a>
+		  <div class="footer-copyright text-center py-3">© 2018 <a target="_blank" href="http:www.samyii.com"> SAMYii.com</a> 2018 | All rights reserved.
 		  </div>
 
 		</footer>
