testing changes modal

--- a/public/index.html
+++ b/public/index.html
@@ -87,19 +87,13 @@
 				                	</p>
 					               <h5>Preperation</h5>
 					               <p>
-					                	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					                	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					                	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					                	consequat. Duis aute irure dolor in.
+					                	Drain the oil from the anchovies and pour in a large bowl. Brush a little of the drained oil onto both sides of each slice of bread.
 					               </p>
 					               <h5>Cooking</h5>
 					               <p>
-					                	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					                	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					                	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					                	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					                	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					                	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					                	Heat a cast-iron griddle pan until very hot then add the slices of bread and cook for 1-2 minutes on each side until lightly charred. Cut each slice in half.
+					                	Put the tomatoes, peppers and mozzarella in the bowl and toss well to coat. Pile on top of the chargrilled bread and top with the anchovy fillets
+					                	Drizzle over any remaining oil left in the bowl, season with freshly ground black pepper and scatter over the basil leaves. 
 					               </p>
 					            </div>
 					            <div class="modal-footer">
@@ -282,7 +276,7 @@
 						<div class="container">
 
 							<div>
-				  				<p class="mb-5 course-intro">A three course meal is only as good as it's main course. This is the dish that can make or break your dinning experience! No matter how good your starter or dessert may be, the bulk of expectation lies in the main course. in addition, the starter and dessert are dependant upon the main. A great three course meal contains three or morse course that compliment eachother and the people dinning on it. So before we break out the fine china and caviar lets make sure our guests are wouldn't prefer a curry. If you are serving a close group of friends in a com.... your starter and dessert will be chosen once you have established your main dish.</p>
+				  				<p class="mb-5 course-intro">A three course meal is only as good as it's main course. This is the dish that can make or break your dinning experience! No matter how good your starter or dessert may be, the bulk of expectation lies in the main course. In addition, the starter and dessert are dependant upon the main. A great three course meal contains three or morse course that compliment eachother and the people dinning on it. So before we break out the fine china and caviar lets make sure our guests are wouldn't prefer a curry. If you are serving a close group of friends in a com.... your starter and dessert will be chosen once you have established your main dish.</p>
 							</div>
 
 							<div class="row">
@@ -394,7 +388,7 @@
 			<div id="Contact" class="tabcontent">
 				<div class="bg4 clearfix">
 					<main class="pt-5 left-side">
-			  			<div class="pt-5 mt-3">
+			  			<div class="pt-5">
 							<h3 class="text-center section-title">Desserts</h3>
 						</div>
 						<div class="container">
